[package]
name = "xkcdfs-fuse"
version = "0.1.0"
edition = "2021"
description = "A FUSE filesystem for browsing XKCD comics"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
fuser = "0.16.0"
libc = "0.2"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }